Fix button tsvp

--- a/index.html
+++ b/index.html
@@ -556,9 +556,15 @@
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
-                    <button style="background-color: white;color: #FFD700; border-color: #FFD700; font-weight: 700; font-size: 20px;" class="btn-fill rsvp-btn" >
-                        <b>Yes, Ci sarò!</b>
-                    </button>
+                        <p>
+                            <input style="background-color: white;
+                            color: #FFD700;
+                            border-color: #FFD700;
+                            font-weight: 700;
+                            font-size: 20px; width: 100%; padding: 15px 0" class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="Yes, ci sarò!"/>
+                        </p>
+                    
+
                 </form>
             </div>
         </div>
