--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Marta e Andrea si sposano!</title>
-    <meta name="description" content="We would like to invite you to our big day.">
+    <meta name="description" content="Vorremmo che tu fossi con noi, nel giorno del nostro matrimonio.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:description" content="We would like to invite you to our big day.">
+    <meta property="og:description" content="Vorremmo che tu fossi con noi, nel giorno del nostro matrimonio.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
