--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img/small2.png" style="height: 25px"></a></div>
+                <div class="logo"><a href="#"><img src="img/small21OK.png" style="height: 25px"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <img src="img/test3.png">
+                    <img src="img/eng_pics/test3 (1).png">
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 <table width="100%" cellspacing="0" cellpadding="0"><tbody><tr><td align="center"><img src="https://counters.pennyblacktemplates.com/id/8692f2174d" alt="Pennyblack Email Countdown Timers" border="0"/></td></tr></tbody></table>
             -->
                 
-                <img src="img/eng_pics/logo-new2text2.jpg" style="display: block;margin-left:auto;margin-right: auto; width:370px"/>
+                <img src="img/eng_pics/new-logo1text1.jpg" style="display: block;margin-left:auto;margin-right: auto; width:370px"/>
                 
                 <div class="col-md-12 text-center" style="margin-bottom: -20px;">
                     <h3 class="header">Countdown al nostro matrimonio!</h3>
