--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                             color: #FFD700;
                             border-color: #FFD700;
                             font-weight: 700;
-                            font-size: 20px; width: 100%; padding: 15px 0" class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="Yes, ci sarò!"/>
+                            font-size: 20px; width: 100%; padding: 15px 0" class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="Yes, ricordamelo!"/>
                         </p>
                     
 
