--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img/small21OK.png" style="height: 25px"></a></div>
+                <div class="logo"><a href="#"><img src="img/swirly-smallOK.png" style="height: 25px"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <img src="img/eng_pics/test3 (1).png">
+                    <img src="img/swirly-goldOK.png"> 
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -68,12 +68,12 @@
         <div class="row">
             <div class="col-sm-4 hidden-xs"></div>
             <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
-                                                           class="btn btn-accent btn-large rsvp-btn" style="font-size: 20px; color:	#FFD700;";><b>Vuoi esserci?</b></a>
+                                                           class="btn btn-accent btn-large rsvp-btn" style="font-size: 20px; color:	#DFC469;";><b>Vuoi esserci?</b></a>
             </div>
             <div class="col-sm-4 hidden-xs"></div>
         </div>
     </div>
-    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down" style="color: #FFD700;"></i></a></div>
+    <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down" style="color: #DFC469;"></i></a></div>
 </section>
 
 <section id="invitation" class="section-padding">
@@ -307,12 +307,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/4.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/17.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/4.jpg" alt=""/>
+                        <img src="img/eng_pics/17.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -413,6 +413,26 @@
                             <i class="fa fa-search"></i>
                         </div>
                         <img src="img/eng_pics/15.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/16.jpeg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/16.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/4.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/4.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -558,8 +578,8 @@
                     </div>
                         <p>
                             <input style="background-color: white;
-                            color: #FFD700;
-                            border-color: #FFD700;
+                            color: #DFC469;
+                            border-color: #DFC469;
                             font-weight: 700;
                             font-size: 20px; width: 100%; padding: 15px 0" class="btn btn-accent btn-small" type="submit" class="fa fa-map-marker" value="Yes, ricordamelo!"/>
                         </p>
