--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img/swirly-smallOK.png" style="height: 25px"></a></div>
+                <div class="logo"><a href="#"><img src="img/swirly-smallOKOK.png" style="height: 25px"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <img src="img/swirly-goldOK.png"> 
+                    <img src="img/swirly-goldOKOK.png"> 
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
