--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
         </div>
         <div class="row">
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/2.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/6.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/2.jpeg" alt=""/>
+                        <img src="img/eng_pics/6.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -297,12 +297,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/6.jpeg">
+                <a class="fancybox" rel="group" href="img/5.jpeg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/6.jpeg" alt=""/>
+                        <img src="img/5.jpeg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -393,6 +393,16 @@
                             <i class="fa fa-search"></i>
                         </div>
                         <img src="img/eng_pics/13.jpeg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/eng_pics/20.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/eng_pics/20.jpg" alt=""/>
                     </div>
                 </a>
             </div>
