Commented rum cigars

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <p><strong>20 Dicembre pomeriggio/sera</strong></p>
+                    <p><strong>20 Dicembre pranzo</strong></p>
 
                     <h5>Ristorante <span class="time">13:00</span></h5>
                     <a href="https://www.villavergine.it/" style="color: #5151fb;"><strong><b>Villa Vergine</b></strong></a>
@@ -199,6 +199,7 @@
                     <p>
                         <strong>Tanta fame!</strong>
                     </p>
+                    <!--
                     <h5>Rum e sigari <span class="time">Fine serata</span></h5>
                     <p>
                         <strong>Chi fuma?</strong>
@@ -206,9 +207,8 @@
                         Ci sarà un angolo dedicato agli amanti (come me) e non del fumo lento.
                         Potrete degustare un buon sigaro, abbinato con un liquore, che sia RUM scuro o nero, Whisky americano e Scotch Whisky, Grappe, Bourbon...
                         E ricordate: <p><strong>"In questa terra di lacrime, ci restano due piaceri: amare una bella donna e fumare un sigaro toscano."</strong></p>
-                        <!--<a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>. -->
                     </p>
+                    -->
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
