Fixed bottom padding

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     <h5>Ristorante <span class="time">13:00</span></h5>
                     <p>
                         <strong>Tanta fame!</strong>
+                        <p>Vi aspettiamo al ristorante!</p>
                     </p>
                     <!--
                     <h5>Rum e sigari <span class="time">Fine serata</span></h5>
