--- a/index.html
+++ b/index.html
@@ -418,12 +418,12 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/15.jpeg">
+                <a class="fancybox" rel="group" href="img/eng_pics/21.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/15.jpeg" alt=""/>
+                        <img src="img/eng_pics/21.jpg" alt=""/>
                     </div>
                 </a>
             </div>
