Readded smoking section

--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
                         <strong>Tanta fame!</strong>
                         <p>Vi aspettiamo al ristorante!</p>
                     </p>
-                    <!--
+                    
                     <h5>Rum e sigari <span class="time">Fine serata</span></h5>
                     <p>
                         <strong>Chi fuma?</strong>
                         <br>
-                        Ci sarà un angolo dedicato agli amanti (come me) e non del fumo lento.
+                        Se le disposizioni del locale lo permetteranno, ci sarà un angolo dedicato agli amanti (come me) e non del fumo lento.
                         Potrete degustare un buon sigaro, abbinato con un liquore, che sia RUM scuro o nero, Whisky americano e Scotch Whisky, Grappe, Bourbon...
                         E ricordate: <p><strong>"In questa terra di lacrime, ci restano due piaceri: amare una bella donna e fumare un sigaro toscano."</strong></p>
                     </p>
-                    -->
+                    
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
